5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1838_1275.log
== TEST (2019-06-22 14:32:47) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))


k=zeros((n,7),dtype=int)
h=int(input("faltas:"))
for i in range(n):
	for j in range(n):
		k[i,j]=h
	h=int(input("faltas:"))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:33:32) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))


k=zeros((7,n),dtype=int)
h=int(input("faltas:"))
for i in range(n):
	for j in range(n):
		k[i,j]=h
	h=int(input("faltas:"))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:33:48) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))


k=zeros((7,n),dtype=int)
h=int(input("faltas:"))
for i in range(n):
	for j in range(n):
		k[i,j]=h
	h=int(input("faltas:"))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:35:09) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))


k=zeros((7,n),dtype=int)
h=array(eval(input("faltas:")))
for i in range(n):
	for j in range(n):
		k[i,j]=h
	h=array(eval(input("faltas:")))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:35:31) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))


k=zeros((7,n),dtype=int)
h=array(eval(input("horas:")))
for i in range(n):
	for j in range(n):
		k[i,j]=h
	h=array(eval(input("horas:")))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:36:25) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))


k=zeros((7,n),dtype=int)
h=array(eval(input("horas:")))
for i in range(n):
	for j in range(n):
		k[:,:]=h
	h=array(eval(input("horas:")))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:37:15) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))


k=zeros((7,n),dtype=int)
h=int(input("horas"))
for i in range(n):
	for j in range(n):
		k[i,j]=h
	h=int(input("horas:"))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:38:47) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))


k=zeros((n,7),dtype=int)
h=int(input("horas"))
for i in range(7):
	for j in range(7):
		k[i,j]=h
	h=int(input("horas:"))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:39:51) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))


k=zeros((n,7),dtype=int)
h=array(eval(input("horas:")))
for i in range(7):
	for j in range(7):
		k[i,j]=h
	h=array(eval(input("horas:")))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:40:08) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))


k=zeros((n,7),dtype=int)
h=int(input("horas:"))
for i in range(7):
	for j in range(7):
		k[i,j]=h
	h=int(input("horas:"))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:40:14) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))


k=zeros((n,7),dtype=int)
h=int(input("horas:"))
for i in range(7):
	for j in range(7):
		k[i,j]=h
	h=int(input("horas:"))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:40:28) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))


k=zeros((n,7),dtype=int)
h=int(input("horas:"))
for i in range(7):
	for j in range(7):
		k[i,j]=h
	h=int(input("horas:"))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:40:43) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))


k=zeros((n,7),dtype=int)
h=int(input("horas:"))
for i in range(7):
	for j in range(7):
		k[i,j]=h
	h=int(input("horas:"))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:41:42) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))


k=zeros((n,7),dtype=int)
h=int(input("horas:"))
for i in range(n):
	for j in range(n):
		k[i,j]=h
	h=int(input("horas:"))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:43:11) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))


k=zeros((n,7),dtype=int)
h=int(input("horas:"))
for i in range(n):
	for j in range(n):
		while(i<size(n)):
			k[i,j]=h
	h=int(input("horas:"))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:43:33) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))


k=zeros((n,7),dtype=int)
h=int(input("horas:"))
for i in range(n):
	for j in range(n):
		while(j<7):
			k[i,j]=h
	h=int(input("horas:"))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:43:47) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))


k=zeros((n,7),dtype=int)
h=int(input("horas:"))
for i in range(n):
	for j in range(n):
		while(j<7):
			k[i,j]=h
	h=int(input("horas:"))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:44:14) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))

j=0
k=zeros((n,7),dtype=int)
h=int(input("horas:"))
for i in range(n):
	for j in range(n):
		while(j<7):
			k[i,j]=h
		h=int(input("horas:"))
		j+=1
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:19:05) 
-- CODE:
from numpy import*
n=int(input("quantos funcionarios?"))

j=0
k=zeros((n,7),dtype=int)
h=int(input("horas:"))
for i in range(n):
	for j in range(n):
		while(j<7):
			k[i,j]=h
		h=int(input("horas:"))
		j+=1
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:22:39) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))

j=0
k=zeros((n,7),dtype=int)

for i in range(n):
	for j in range(n):
		k[:,j]=shape(input(""))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:22:49) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))

j=0
k=zeros((n,7),dtype=int)

for i in range(n):
	for j in range(n):
		k[:,j]=shape(input(""))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:23:10) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))

j=0
k=zeros((n,7),dtype=int)

for i in range(n):
	for j in range(n):
		k[:,j]=shape(input(""))
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:23:20) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))

j=0
k=zeros((n,7),dtype=int)

for i in range(n):
	for j in range(n):
		k[:,j]=shape(quadro)
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:23:32) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))

j=0
k=zeros((n,7),dtype=int)

for i in range(n):
	for j in range(n):
		k[:,:]=shape(quadro)
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:23:51) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))

j=0
k=zeros((n,7),dtype=int)

for i in range(n):
	for j in range(n):
		k[:,:]=shape(quadro)[1]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:24:11) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))

j=0
k=zeros((n,7),dtype=int)

for i in range(n):
	for j in range(n):
		k[:,:]=shape(input("horas"))[1]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:51:45) 
-- CODE:
from numpy import*
from random import randint

n=int(input("quantos funcionarios?"))


if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = randint(0,9)
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:53:13) 
-- CODE:
from numpy import*
from random import randint

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = randint(0,9)
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:54:14) 
-- CODE:
from numpy import*
from random import randint

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:54:46) 
-- CODE:
from numpy import*
from random import randint

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 12:56:42) 
-- CODE:
from numpy import*
from random import randint

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- EXECUTION TIME:
0.864488
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1275/main.py", line 4, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:56:51) 
-- CODE:
from numpy import*
from random import randint

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 12:57:13) 
-- CODE:
from numpy import*
from random import randint

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = randit(0,9)
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- EXECUTION TIME:
0.960644
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1275/main.py", line 4, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:58:18) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:58:36) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 12:59:10) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- EXECUTION TIME:
1.26287
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1275/main.py", line 3, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:59:51) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 12:59:57) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 13:01:37) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
	print(v)
			
			
-- EXECUTION TIME:
1.15977
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1275/main.py", line 3, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 13:02:08) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >=1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- EXECUTION TIME:
1.11884
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1275/main.py", line 3, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:02:24) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 13:02:28) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- EXECUTION TIME:
0.922172
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1275/main.py", line 3, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:06:01) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 13:06:32) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- EXECUTION TIME:
1.23373
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1275/main.py", line 3, in <module>
    n=int(input())
ValueError: invalid literal for int() with base 10: '[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:09:50) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:10:05) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:21:58) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			#cont+=m[i][j]
			#v[i] = cont
	cont=shape(m)[i]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:22:14) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			#cont+=m[i][j]
			#v[i] = cont
	cont=shape(m)[i]
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:22:31) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			#cont+=m[i][j]
			#v[i] = cont
	cont=shape(m)[i]
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 13:23:40) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:10:50) 
-- CODE:
from numpy import*

n=int(input("quantos funcionarios?"))
m= zeros((n,7),dtype=int)
v = zeros((n), dtype=int)

if n >1:
	for i in range(n):
		cont = 0
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:17:52) 
-- CODE:
from numpy import*

m=array(eval(input("quantos funcionarios?")))

#v = zeros((n), dtype=int)
print(shape(m)[0])
if n >1:
	for i in range(shape(m)[0]):
		cont = 0
		#v[i] = sum(m[i:])
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:17:59) 
-- CODE:
from numpy import*

m=array(eval(input("quantos funcionarios?")))

#v = zeros((n), dtype=int)
print(shape(m)[0])
if n >1:
	for i in range(shape(m)[0]):
		cont = 0
		#v[i] = sum(m[i:])
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:19:56) 
-- CODE:
from numpy import*

m=array(eval(input("quantos funcionarios?")))
n=shape(m)[0]
v = zeros((n), dtype=int)

#if n >1:
	for i in range(shape(m)[0]):
		cont = 0
		#v[i] = sum(m[i:])
		for j in range(7):
			m[i][j] = input()
			cont+=m[i][j]
			v[i] = cont
print(v)
-- ERROR:
File "XXXX", line 8
    for i in range(shape(m)[0]):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:20:09) 
-- CODE:
from numpy import*

m=array(eval(input("quantos funcionarios?")))
n=shape(m)[0]
v = zeros((n), dtype=int)

#if n >1:
for i in range(shape(m)[0]):
	cont = 0
		#v[i] = sum(m[i:])
	for j in range(7):
		m[i][j] = input()
		cont+=m[i][j]
		v[i] = cont
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:20:45) 
-- CODE:
from numpy import*

m=array(eval(input("quantos funcionarios?")))
n=shape(m)[0]
v = zeros((n), dtype=int)

#if n >1:
for i in range(shape(m)[0]):
	cont = 0
		#v[i] = sum(m[i:])
	for j in range(7):
		#m[i][j] = inp
		cont+=m[i][j]
		v[i] = cont
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:20:56) 
-- CODE:
from numpy import*

m=array(eval(input("quantos funcionarios?")))
n=shape(m)[0]
v = zeros((n), dtype=int)

#if n >1:
for i in range(shape(m)[0]):
	cont = 0
		#v[i] = sum(m[i:])
	for j in range(7):
		#m[i][j] = inp
		cont+=m[i][j]
		v[i] = cont
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 14:21:08) 
-- CODE:
from numpy import*

m=array(eval(input("quantos funcionarios?")))
n=shape(m)[0]
v = zeros((n), dtype=int)

#if n >1:
for i in range(shape(m)[0]):
	cont = 0
		#v[i] = sum(m[i:])
	for j in range(7):
		#m[i][j] = inp
		cont+=m[i][j]
		v[i] = cont
print(v)
-- EXECUTION TIME:
1.23701
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:29:25) 
-- CODE:
from numpy import*

m=array(eval(input("quantas horas?")))
n=shape(m)[0]
v = zeros((n), dtype=int)

#if n >1:
for i in range(shape(m)[0]):
	cont = 0
		#v[i] = sum(m[i:])
	for j in range(4):
		#m[i][j] = inp
		cont=cont+m[i,j]
		v[i] = cont
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 14:29:30) 
-- CODE:
from numpy import*

m=array(eval(input("quantas horas?")))
n=shape(m)[0]
v = zeros((n), dtype=int)

#if n >1:
for i in range(shape(m)[0]):
	cont = 0
		#v[i] = sum(m[i:])
	for j in range(4):
		#m[i][j] = inp
		cont=cont+m[i,j]
		v[i] = cont
print(v)
-- EXECUTION TIME:
1.1713
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[19 26 24 25 19 14 22 21 22 13 27 24 21 15 25 10]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[14 14 27 21 18 22 32 20 12 24  8 12 17 10 27 23 20 13 12  8  6]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[12 13 29 12 20 27 26 20 21 22 23 23 25 22 13 17  8 18 13 10 21 20 28 23
 24 16 24]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-24 14:29:38) 
-- CODE:
from numpy import*

m=array(eval(input("quantas horas?")))
n=shape(m)[0]
v = zeros((n), dtype=int)

#if n >1:
for i in range(shape(m)[0]):
	cont = 0
		#v[i] = sum(m[i:])
	for j in range(7):
		#m[i][j] = inp
		cont=cont+m[i,j]
		v[i] = cont
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-24 14:29:43) 
-- CODE:
from numpy import*

m=array(eval(input("quantas horas?")))
n=shape(m)[0]
v = zeros((n), dtype=int)

#if n >1:
for i in range(shape(m)[0]):
	cont = 0
		#v[i] = sum(m[i:])
	for j in range(7):
		#m[i][j] = inp
		cont=cont+m[i,j]
		v[i] = cont
print(v)
-- EXECUTION TIME:
1.1366
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
